建立测试任务

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>gruntDemo</title>
 </head>
 <body>
-    
+    <script type="text/javascript" src="bulid/js/build.js"></script>
 </body>
 </html>
