--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>gruntDemo</title>
 </head>
 <body>
+    <div id="id1"></div>
+    <div id="id2"></div>
     <script type="text/javascript" src="bulid/js/build.js"></script>
 </body>
 </html>
