--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gruntDemo</title>
+    <link rel="stylesheet" href="build/css/build.min.css">
 </head>
 <body>
     <div id="id1"></div>
     <div id="id2"></div>
-    <script type="text/javascript" src="bulid/js/build.js"></script>
+    <script type="text/javascript" src="build/js/build.min.js"></script>
 </body>
 </html>
